--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --secondary-text-color-theme-light: #434455;
     --accent-color: #4D5AE5;
     --border-color: #E7E9FC;
+    --customer-color: #8e8f99;
 }
 
 .header-menu-format {
@@ -14,9 +15,6 @@
     gap: 40px;
 }
 
-.icons {
-    color: #8E8F99;
-}
 
 section > div {
     width: 1158px;
@@ -38,6 +36,9 @@ section > div {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 ul {
@@ -178,7 +179,9 @@ body {
     background-color: #404BBF;
     color: var(--secondary-text-color-theme-dark);
     border: 1px solid transparent;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 2px 1px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .order-button {
@@ -216,7 +219,7 @@ body {
 .main-page {
     background: var(--primary-text-color-theme-light);
     display: flex;
-    width: 1440px;
+    max-width: 1440px;
     height: 600px;
     flex-direction: column;
     justify-content: center;
@@ -224,7 +227,8 @@ body {
     padding: 188px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/office.jpg');
     background-size: cover;
-
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .main-header {
@@ -254,7 +258,7 @@ body {
 .secondary-header {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11;
+    line-height: 1.1;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
@@ -291,8 +295,9 @@ body {
 }
 
 .name {
-     padding: 32px 16px;
+    padding: 32px 0px
 }
+
 
 .name-card {
     padding: 32px 16px;
@@ -425,6 +430,14 @@ body {
 
 }
 
+.card-link:hover,
+.card-link:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+
 .card-item:hover,
 .card-item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -436,17 +449,26 @@ body {
 }
 
 .customer {
+    width: 100%;
+    height: 100%;
     box-sizing: border-box;
     border: 1px solid #8E8F99;
-    border-radius: 4px;
-    fill:#8E8F99;
+    border-radius: 4px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--customer-color);
+
 }
 
 .customer:hover,
 .customer:focus {
-    border: 1px solid #404BBF;
-    border-radius: 4px;
-    fill: #404BBF
+    border-color: #404bbf;
+    color: #404bbf;
+}
+
+.customer-icon{
+    fill: currentColor;
 }
 
 .customer-list {
@@ -460,6 +482,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 24px;
+    width: 168px;
+    height: 88px;
 }
 
 .media-footer {
@@ -477,30 +502,29 @@ body {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #FFFFFF;
+    color: var(--secondary-text-color-theme-dark);
     margin-bottom: 16px;
 }
 
 .footer-box-media {
-    margin-left: 120px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 .footer-box-logo {
-    margin-left: 156px;
+    margin-right: 120px;
+}
+
+.footer-div {
+    display: flex;
+    align-items: baseline
 }
 
 .media-team {
-    fill: #4D5AE5;
-}
-
-.media-team:hover,
-.media-team:focus {
-    fill: #31D0AA;
+    fill: var(--primary-text-color-theme-dark)
 }
 
 .media-list {
@@ -510,4 +534,56 @@ body {
     gap: 24px;
     flex-wrap: nowrap;
     margin-top: 8px;
+}
+
+.media-list-ft {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 16px;
+}
+
+.icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
+.media-round-card {
+    width: 40px;
+    height: 40px;
+}
+
+.media-link-card {
+    width: 100%;
+    height: 100%;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.media-link-card:hover,
+.media-link-card:focus {
+    background-color: #404bbf;
+}
+
+.media-link-ft {
+    width: 100%;
+    height: 100%;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.media-link-ft:hover,
+.media-link-ft:focus {
+    background-color: #31d0aa;
 }
