--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
 }
 
 
-section > div {
+section>div {
     width: 1158px;
     margin-left: auto;
     margin-right: auto;
@@ -36,9 +36,6 @@ section > div {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-                0px 1px 1px rgba(46, 47, 66, 0.16),
-                0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 ul {
@@ -108,7 +105,10 @@ body {
     align-items: center;
     height: 72px;
     top: 0px;
-    border-bottom: 1px solid #e7e9fc
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .navigation {
@@ -475,6 +475,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
+    gap: 24px;
 }
 
 .customer-item {
