--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --accent-color: #4D5AE5;
     --border-color: #E7E9FC;
     --customer-color: #8e8f99;
+    --transition-duration-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-format {
@@ -16,13 +17,7 @@
 }
 
 
-section>div {
-    width: 1158px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
+
 
 .conteiner {
     width: 1158px;
@@ -58,7 +53,8 @@ ul {
 .link:hover,
 .link:focus {
     text-decoration: underline;
-    color: #404BBF
+    color: #404BBF;
+    transition: var(--transition-duration-function);
 }
 
 img {
@@ -89,7 +85,11 @@ button {
     margin-bottom: 0;
 }
 
-h1,h2,h3,h4,p {
+h1,
+h2,
+h3,
+h4,
+p {
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -107,8 +107,8 @@ body {
     top: 0px;
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-                0px 1px 1px rgba(46, 47, 66, 0.16),
-                0px 1px 6px rgba(46, 47, 66, 0.08);
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .navigation {
@@ -120,13 +120,27 @@ body {
     flex-direction: row;
     padding: 24px 0;
 }
+
+.menu-link::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    transition: color var(--transition-duration-function);
+}
+
 .menu-link {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--primary-text-color-theme-light);
-    padding: 24px 0
+    color: #404bbf;
+    padding: 24px 0;
+    position: relative;
+    transition: color var(--transition-duration-function);
 }
 
 .contact-link {
@@ -143,6 +157,10 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     margin-left: 40px;
+}
+
+.contact-transition {
+    transition: color var(--transition-duration-function);
 }
 
 .contact-mail {
@@ -164,6 +182,11 @@ body {
     letter-spacing: 0.04em;
     padding: 12px 24px;
     border: 1px solid var(--border-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .menu {
@@ -182,6 +205,7 @@ body {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 2px 1px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition: var(--transition-duration-function);
 }
 
 .order-button {
@@ -209,17 +233,18 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 48px;
+    transition: background-color var(--transition-duration-function);
 }
 
 .order-button:hover,
 .order-button:focus {
-    background: #404BBF
+    background: #404BBF;
+    transition: var(--transition-duration-function);
 }
 
 .main-page {
     background: var(--primary-text-color-theme-light);
     display: flex;
-    max-width: 1440px;
     height: 600px;
     flex-direction: column;
     justify-content: center;
@@ -396,7 +421,6 @@ body {
 
 .footer-bgd {
     background: var(--primary-text-color-theme-light);
-    width: 1440px;
     height: 312px;
     display: flex;
     flex-direction: row;
@@ -430,17 +454,29 @@ body {
 
 }
 
+.card-link {
+    transition: box-shadow var(--transition-duration-function);
+}
+
 .card-link:hover,
 .card-link:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: var(--transition-duration-function);
+}
+
+.card-link:hover .overlay,
+.card-link:focus .overlay {
+    transform: translateY(0%);
+    transition: var(--transition-duration-function);
 }
 
 
 .card-item:hover,
 .card-item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: var(--transition-duration-function);
 }
 
 .card-text {
@@ -453,21 +489,23 @@ body {
     height: 100%;
     box-sizing: border-box;
     border: 1px solid #8E8F99;
-    border-radius: 4px; 
+    border-radius: 4px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--customer-color);
-
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer:hover,
 .customer:focus {
     border-color: #404bbf;
     color: #404bbf;
+    transition: var(--transition-duration-function);
 }
 
-.customer-icon{
+.customer-icon {
     fill: currentColor;
 }
 
@@ -496,6 +534,7 @@ body {
 .media-footer:hover,
 .media-footer:focus {
     fill: #31D0AA;
+    transition: var(--transition-duration-function);
 }
 
 .media-header {
@@ -567,11 +606,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color var(--transition-duration-function);
 }
 
 .media-link-card:hover,
 .media-link-card:focus {
     background-color: #404bbf;
+    transition: var(--transition-duration-function);
 }
 
 .media-link-ft {
@@ -582,9 +623,95 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color var(--transition-duration-function);
 }
 
 .media-link-ft:hover,
 .media-link-ft:focus {
     background-color: #31d0aa;
+    transition: background-color var(--transition-duration-function);
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(77, 90, 229, 1);
+    color: rgba(244, 244, 253, 1);
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform var(--transition-duration-function);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    padding: 40px 32px;
+}
+
+.wraper {
+    position: relative;
+    overflow: hidden;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+    width: 408px;
+    min-height: 576px;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    background: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform var(--transition-duration-function);
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.close-button {
+    box-sizing: border-box;
+    background: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.close-button:hover,
+.close-button:focus {
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
+}
+
+.close-button-svg {
+    transition: fill var(--transition-duration-function);
 }
