--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,7 @@
     gap: 40px;
 }
 
-
-
-
-.conteiner {
+.container {
     width: 1158px;
     margin-left: auto;
     margin-right: auto;
@@ -48,13 +45,6 @@ ul {
 
 .list {
     list-style: none;
-}
-
-.link:hover,
-.link:focus {
-    text-decoration: underline;
-    color: #404BBF;
-    transition: var(--transition-duration-function);
 }
 
 img {
@@ -132,12 +122,17 @@ body {
     transition: color var(--transition-duration-function);
 }
 
+.menu-link:hover,
+.menu-link:focus {
+    color: #404BBF;
+}
+
 .menu-link {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #404bbf;
+    color: var(--primary-text-color-theme-light);
     padding: 24px 0;
     position: relative;
     transition: color var(--transition-duration-function);
@@ -149,30 +144,17 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     gap: 40px;
-}
-
-.contact-tel {
-    color: var(--secondary-text-color-theme-light);
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    margin-left: 40px;
-}
-
-.contact-transition {
     transition: color var(--transition-duration-function);
 }
 
-.contact-mail {
-    color: var(--secondary-text-color-theme-light);
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: 0.02em
+.contact-link:hover,
+.contact-link:focus {
+    color: #404BBF;
 }
+
 
 .content-button {
     background-color: var(--primary-text-color-theme-dark);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     font-weight: 500;
     font-size: 16px;
@@ -206,6 +188,7 @@ body {
         0px 2px 1px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
     transition: var(--transition-duration-function);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .order-button {
@@ -245,7 +228,6 @@ body {
 .main-page {
     background: var(--primary-text-color-theme-light);
     display: flex;
-    height: 600px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -269,9 +251,14 @@ body {
     margin-right: auto;
 }
 
-.content-page {
+.content-page-values {
     background: #FCFCFC;
     padding: 120px 0;
+}
+
+.content-page-activities {
+    background: #FCFCFC;
+    padding-bottom: 120px;
 }
 
 .content-page-portfolio {
@@ -279,6 +266,10 @@ body {
     padding: 96px 0 120px
 }
 
+.content-page-customers {
+    background: #FCFCFC;
+    padding: 120px 0;
+}
 
 .secondary-header {
     font-weight: 700;
@@ -292,8 +283,6 @@ body {
 
 .team-page {
     background: var(--primary-text-color-theme-dark);
-    width: 1440px;
-    height: 732px;
     padding: 120px 0;
 }
 
@@ -301,7 +290,6 @@ body {
     display: flex;
     flex-direction: row;
     margin-top: 72px;
-    margin-bottom: 120px;
     justify-content: space-between;
     gap: 24px;
 }
@@ -320,14 +308,13 @@ body {
 }
 
 .name {
-    padding: 32px 0px
+    padding: 32px 0px;
+    width: 232px;
 }
 
 
 .name-card {
     padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
 }
 
 .values-list {
@@ -415,13 +402,10 @@ body {
     letter-spacing: 0.02em;
     color: var(--primary-text-color-theme-dark);
     max-width: 264px;
-    height: 72px;
-    margin-top: 17.5px;
 }
 
 .footer-bgd {
     background: var(--primary-text-color-theme-light);
-    height: 312px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -445,17 +429,17 @@ body {
 
 .card-item {
     width: calc((100% - 48px) / 3);
-    height: 420px;
     background-color: var(--secondary-text-color-theme-dark);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
 .card-link {
     transition: box-shadow var(--transition-duration-function);
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .card-link:hover,
@@ -480,8 +464,7 @@ body {
 }
 
 .card-text {
-    margin-left: 16px;
-    margin-bottom: 8px
+    
 }
 
 .customer {
