--- a/css/styles.css
+++ b/css/styles.css
@@ -231,11 +231,15 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    align-self: center;
+    max-width: 1440px;
     padding: 188px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/office.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .main-header {
@@ -463,9 +467,6 @@ body {
     transition: var(--transition-duration-function);
 }
 
-.card-text {
-    
-}
 
 .customer {
     width: 100%;
