--- a/css/styles.css
+++ b/css/styles.css
@@ -477,7 +477,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--customer-color);
+    color: #8E8F99;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -585,7 +585,7 @@ body {
 .media-link-card {
     width: 100%;
     height: 100%;
-    background-color: var(--accent-color);
+    background-color: #4D5AE5;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -596,13 +596,12 @@ body {
 .media-link-card:hover,
 .media-link-card:focus {
     background-color: #404bbf;
-    transition: var(--transition-duration-function);
 }
 
 .media-link-ft {
     width: 100%;
     height: 100%;
-    background-color: var(--accent-color);
+    background-color: #4D5AE5;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -613,7 +612,6 @@ body {
 .media-link-ft:hover,
 .media-link-ft:focus {
     background-color: #31d0aa;
-    transition: background-color var(--transition-duration-function);
 }
 
 .overlay {
